tailwind Css and daisy ui install

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="cupcake">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/Summer 1.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.main.css">
     <title>Summer SALE</title>
 </head>
 <body>
