--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="cupcake">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/Summer 1.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.main.css">
     <title>Summer SALE</title>
 </head>
-<body>
 
-    
-    
+<body class="font-workSans">
+    <!-- main container tailwind class "container sm:container md:container 2xl:container mx-auto px-4"  -->
+    <header class="bg-heroBgColor">
+        <!-- header section here -->
+        <div class="container sm:container md:container 2xl:container mx-auto px-4 
+    flex justify-center items-center text-primaryTextColor ">
+            <div class="text-center">
+                <h4 class="text-fevrFontSize font-medium">---SALE FEVER---</h4>
+                <h2 class="text-disoundFontSize font-bold 
+                max-w-discountSectioWidth my-16">Purchase TK 200 or above & get
+                    <span class="text-primaryBtnClor">20% off</span></h2>
+                <div class="flex justify-center items-center">
+                    <h3 class="text-2xl font-medium mr-4">Use Promo Code</h3>
+                    <a id="coupn-code" class="btn bg-primaryBtnClor hover:bg-btnHoverColor
+                    text-neutral-50 rounded-lg" href="#">SELL200</a>
+                </div>
+            </div>
+
+            <div>
+                <img src="./images/Summer 1.png" alt="Summer SALE">
+            </div>
+        </div>
+    </header>
+
+
 </body>
+
 </html>
