--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                     <span class="text-primaryBtnClor">20% off</span></h2>
                 <div class="flex justify-center items-center">
                     <h3 class="text-2xl font-medium mr-4">Use Promo Code</h3>
-                    <a id="coupn-code" class="btn bg-primaryBtnClor hover:bg-btnHoverColor
-                    text-neutral-50 rounded-lg" href="#">SELL200</a>
+                    <a id="coupn-code" class="btn bg-primaryBtnClor hover:bg-primaryBtnClor
+                    text-neutral-50 rounded-lg tracking-widest uppercase" href="#">SELL200</a>
                 </div>
             </div>
 
-            <div>
+            <div class="max-w-discountSectioWidth my-20">
                 <img src="./images/Summer 1.png" alt="Summer SALE">
             </div>
         </div>
