desigen is compleated now

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- header section here -->
     <header class="bg-heroBgColor">
-        <div class="container sm:container md:container lg:container 2xl:container mx-auto md:px-4 px-10
+        <div class="container sm:container md:container lg:container xl:container 2xl:container mx-auto md:px-4 px-10
     flex flex-col md:flex-row justify-center items-center py-20 text-primaryTextColor ">
             <div class="text-center">
                 <h4 class="text-fevrFontSize font-medium">---SALE FEVER---</h4>
@@ -29,7 +29,7 @@
                 <div class="md:flex justify-center items-center hidden">
                     <h3 class="text-2xl font-medium  lg:mr-4 mr-1">Use Promo Code</h3>
                     <a id="coupn-text" class="btn bg-primaryBtnClor hover:bg-primaryBtnClor
-                    text-neutral-50 rounded-lg tracking-widest" href="#">SELL200</a>
+                    text-neutral-50 text-xl rounded-lg tracking-widest" href="#cuponLocation" disabled>SELL200</a>
                 </div>
             </div>
 
@@ -39,21 +39,24 @@
 
             <div class="flex justify-center items-center mt-4 md:hidden">
                 <h3 class="text-2xl font-medium mr-4">Use Promo Code</h3>
-                <a id="coupn-code" class="btn bg-primaryBtnClor hover:bg-primaryBtnClor
-                text-neutral-50 rounded-lg tracking-widest" href="#">SELL200</a>
+                <a href="#copunlocation" class="btn bg-primaryBtnClor hover:bg-primaryBtnClor
+                text-neutral-50 text-xl rounded-lg tracking-widest" disabled>SELL200</a>
             </div>
         </div>
     </header>
 
-    <main class="container sm:container md:container lg:container 2xl:container mx-auto px-4">
+    <main class="container sm:container md:container lg:container xl:container 2xl:container mx-auto px-4">
         <!-- produact section -->
-        <section class="flex justify-center gap-5  my-20 md:my-28">
-            <div>
-                <h2 class="text-productTitleSize font-semibold mb-8">Kitchenware</h2>
-                <div class="flex gap-4">
+        <section class="flex flex-col flex-col-reverse xl:flex-row justify-center gap-5  lg:my-20 md:mb-28">
+
+
+            <!-- group product -->
+            <div id="cuponLocation" class="flex items-center xl:items-start flex-col">
+                <h2 class="text-productTitleSize font-semibold my-8">Kitchenware</h2>
+                <div class="flex justify-center flex-col flex-wrap sm:flex-row lg:flex-nowrap gap-4">
                     <!-- product 1 -->
                     <div class="card bg-whiteColor p-5">
-                        <figure class="px-10 pt-10 bg-productBgColor w-72 rounded-md">
+                        <figure class="px-10 pt-10 bg-productBgColor w-72  rounded-md">
                             <img src="./images/prod1.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
@@ -93,7 +96,7 @@
                         </div>
                     </div>
 
-                    <!-- product 1 -->
+                    <!-- product 3 -->
                     <div class="card bg-whiteColor p-5">
                         <figure class="px-10 pt-10 bg-productBgColor rounded-md w-72">
                             <img src="./images/prod3.png" alt="Shoes" class="rounded-xl" />
@@ -113,20 +116,160 @@
                             <p class="text-xl font-normal"><span>39.00 TK</span></p>
                         </div>
                     </div>
-
-
                 </div>
+
+                <!-- group section -->
+                <h2 class="text-productTitleSize font-semibold my-8">Sportswear</h2>
+                <div class="flex justify-center flex-col flex-wrap sm:flex-row lg:flex-nowrap gap-4">
+                    <!-- product 1 -->
+                    <div class="card bg-whiteColor p-5">
+                        <figure class="px-10 pt-10 bg-productBgColor w-72 rounded-md">
+                            <img src="./images/prod4.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+
+                            <div class="rating">
+                                <input type="radio" name="rating-1" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-1" class="mask mask-star-2 bg-reatingStarColor"
+                                    checked />
+                                <input type="radio" name="rating-1" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-1" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-1" class="mask mask-star-2 bg-reatingStarColor" />
+                            </div>
+
+                            <h2 class="card-title">K. Accessories</h2>
+                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                        </div>
+                    </div>
+
+                    <!-- product 2 -->
+                    <div class="card bg-whiteColor p-5">
+                        <figure class="px-10 pt-10 bg-productBgColor w-72 rounded-md">
+                            <img src="./images/prod5.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+
+                            <div class="rating">
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor"
+                                    checked />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor" />
+                            </div>
+
+                            <h2 class="card-title">K. Accessories</h2>
+                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                        </div>
+                    </div>
+
+                    <!-- product 3 -->
+                    <div class="card bg-whiteColor p-5">
+                        <figure class="px-10 pt-10 bg-productBgColor rounded-md w-72">
+                            <img src="./images/prod6.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+
+                            <div class="rating">
+                                <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor"
+                                    checked />
+                                <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
+                            </div>
+
+                            <h2 class="card-title">K. Accessories</h2>
+                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                        </div>
+                    </div>
+                </div>
+                <!-- group section -->
+                <h2 class="text-productTitleSize font-semibold my-8">Furniture</h2>
+                <div class="flex justify-center flex-col flex-wrap sm:flex-row lg:flex-nowrap gap-4">
+                    <!-- product 1 -->
+                    <div class="card bg-whiteColor p-5">
+                        <figure class="px-10 pt-10 bg-productBgColor w-72 rounded-md">
+                            <img src="./images/prod7.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+
+                            <div class="rating">
+                                <input type="radio" name="rating-1" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-1" class="mask mask-star-2 bg-reatingStarColor"
+                                    checked />
+                                <input type="radio" name="rating-1" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-1" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-1" class="mask mask-star-2 bg-reatingStarColor" />
+                            </div>
+
+                            <h2 class="card-title">K. Accessories</h2>
+                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                        </div>
+                    </div>
+
+                    <!-- product 2 -->
+                    <div class="card bg-whiteColor p-5">
+                        <figure class="px-10 pt-10 bg-productBgColor w-72 rounded-md">
+                            <img src="./images/prod8.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+
+                            <div class="rating">
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor"
+                                    checked />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-2" class="mask mask-star-2 bg-reatingStarColor" />
+                            </div>
+
+                            <h2 class="card-title">K. Accessories</h2>
+                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                        </div>
+                    </div>
+
+                    <!-- product 3 -->
+                    <div class="card bg-whiteColor p-5">
+                        <figure class="px-10 pt-10 bg-productBgColor rounded-md w-72">
+                            <img src="./images/prod9.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+
+                            <div class="rating">
+                                <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor"
+                                    checked />
+                                <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
+                                <input type="radio" name="rating-3" class="mask mask-star-2 bg-reatingStarColor" />
+                            </div>
+
+                            <h2 class="card-title">K. Accessories</h2>
+                            <p class="text-xl font-normal"><span>39.00 TK</span></p>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
             </div>
 
-            <div class="mt-24">
+            <div class="mt-32 flex flex-wrap xl:block xl:bg-bodyBgColor bg-whiteColor justify-center items-center">
                 <div class="bg-whiteColor p-6 rounded-lg">
                     <h3 class="text-2xl font-medium mb-5">Have coupon?</h3>
-                    <div class="text-center">
-                        <input class="text-xl p-3 border border-borderColor
-                        focus:outline-none font-normal" placeholder="Coupon code" type="text" id="coupon-code">
-                        <input class="p-3 border border-primaryBtnClor 
-                        text-xl font-semibold -ml-2 bg-primaryBtnClor text-whiteColor rounded-r-lg" type="button"
-                            value="Apply">
+                    <div class="text-center lg:w-80  ">
+                        <input class="text-xl p-2 border border-borderColor
+                        focus:outline-none font-normal w-48 lg:w-56 rounded-l-lg -ml-4" placeholder="Coupon code" type="text" id="coupon-code">
+                        <input class="
+                        capitalize
+                        btn rounded-l-none
+                        hover:bg-primaryBtnClor
+                          border border-primaryBtnClor 
+                        text-xl font-semibold -ml-2 bg-primaryBtnClor 
+                        text-whiteColor rounded-r-lg" type="button"
+                            value="Apply" disabled>
                     </div>
 
                 </div>
@@ -140,12 +283,13 @@
                     <div class="">
                         <p>Total price: <span class="text-tkTextColor">257.00 TK</span></p>
                         <p>Discount : <span class="text-tkTextColor">51.40 TK</span></p>
-                        <p class="border-b border-borderColor pb-6">Total: <span class="text-tkTextColor">51.40 TK</span></p>
-                        
-                        <button class="btn bg-primaryBtnClor hover:bg-primaryBtnClor
-                        text-neutral-50 rounded-lg tracking-widest py-4 px-16 mt-6">Make Purchase</button>
+                        <p class="border-b border-borderColor pb-6">Total: <span class="text-tkTextColor">51.40
+                                TK</span></p>
 
-                        
+                        <button class="btn bg-primaryBtnClor hover:bg-primaryBtnClor
+                        text-neutral-50 rounded-lg tracking-widest px-16 mt-6 text-xl capitalize" disabled>Make Purchase</button>
+
+
                     </div>
                 </div>
             </div>
